tests/algorithms/x/Java/machine_learning/forecasting/run.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden503_run835963613/001/Main.java:156: error: incompatible types: inference variable A has incompatible bounds
            X = java.util.stream.Stream.concat(java.util.Arrays.stream(X), java.util.stream.Stream.of(new Object[]{1.0, train_dt[(int)(i_16)], train_mtch[(int)(i_16)]})).toArray(Object[][]::new);
                                                                                                                                                                                 ^
    upper bounds: double[],Object
    lower bounds: Object[]
  where A is a type-variable:
    A extends Object declared in method <A>toArray(IntFunction<A[]>)
/tmp/TestJavaTranspiler_Algorithms_Golden503_run835963613/001/Main.java:169: error: incompatible types: inference variable A has incompatible bounds
            X_2 = java.util.stream.Stream.concat(java.util.Arrays.stream(X_2), java.util.stream.Stream.of(new Object[]{1.0, train_user[(int)(i_18 - 1)], train_match[(int)(i_18)]})).toArray(Object[][]::new);
                                                                                                                                                                                            ^
    upper bounds: double[],Object
    lower bounds: Object[]
  where A is a type-variable:
    A extends Object declared in method <A>toArray(IntFunction<A[]>)
2 errors
